	Fixed bug where resize handles would be positioned incorrectly when inline element parent was using position: relative.
	Fixed bug where IE 8 would throw Unknown runtime error if the editor was placed within a P tag.
	Fixed bug where removing empty lists wouldn't produce blocks or brs where the old list was in the DOM.
Version 4.0.3 (2013-08-08)
	Added new code_dialog_width/code_dialog_height options to control code dialog size.
	Added missing pastetext button that works the same way as the pastetext menu item.
	Added missing smaller browse button for the classical smaller toolbars.
	Fixed bug where input method would produce new lines when inserting contents to an empty editor.
	Fixed bug where pasting single indented list items from Word would cause a JS exception.
	Fixed bug where applying block formats inside list elements in inline mode would apply them to whole document.
	Fixed bug where link editing in inline mode would cause exception on IE/WebKit.
	Fixed bug where IE 10 wouldn't render the last button group properly in inline mode due to wrapping.
	Fixed bug where localStorage initialization would fail on Firefox/Chrome with disabled support.
	Fixed bug where image elements would get an __mce id when undo/redo:ing to a level with image changes.
	Fixed bug where too long template names wouldn't fit the listbox in template plugin.
	Fixed bug where alignment format options would be marked disabled when forced_root_block was set to false.
	Fixed bug where UI listboxes such as fontsize, fontfamily wouldn't update properly when switching editors in inline mode.
	Fixed bug where the formats select box would mark the editable container DIV as a applied format in inline mode.
	Fixed bug where IE 7/8 would scroll to empty editors when initialized.
	Fixed bug where IE 7/8 wouldn't display previews of format options.
	Fixed bug where UI states wasn't properly updated after code was changed in the code dialog.